# StatGuard-Agent

./: .dockerignore.txt  .gitignore  Dockerfile  LICENSE  README.md  app.py  headless_test.py  pyproject.toml  quick_start.py  requirements.lock.txt  requirements.txt  run_agent.py  smoke_test.py
agents/: coverage_brief.py  supervisor.py
benchmark/: generate_datasets.py  rubric.py  run_e2e_review.py  run_our_agent.py  run_our_agent_e2e.py
core/: action_access.py  action_codec.py  analysis_coverage.py  analysis_runs.py  claims.py  config.py  context_builder.py  data_prep.py  data_versions.py  deliverables.py  execution_access.py  execution_codec.py  graph.py  guardrails.py  headless.py  interaction_intent.py  report_builder.py  reproducibility.py  responses.py  schema.py  state.py  verification_access.py  verification_codec.py
data/: class_survey.xls  test_data.csv  test_data_2.csv
demo_data/: ecommerce_demo.duckdb
docs/: 16_ui_adapter_contract.md  17_new_ui_skeleton_design.md  18_app_v2_manual_smoke_checklist.md  19_app_v2_manual_smoke_results.md  20_app_v2_ui_polish_notes.md  21_app_v3_one_screen_ui_contract.md  22_app_v3_report_export_contract.md  23_app_v3_result_interpretation_contract.md  demo_prompts.md  demo_walkthrough.md  github_release_checklist.md  plugin_method_template.md  requirements_notes.md  resume_bullets.md
paper/: paper.bib  paper.md
screenshots/: 05_html_report.html  README.md
statguard_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_analysis_coverage.py  test_answer_quality_gate.py  test_apa_methods.py  (+20 more)
(+402 files in other folders)
